# SurplusClaim

./: .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  PLAN.md  README.md  docker-compose.yml  package.json  plan razvoja v2  pnpm-lock.yaml  project real v3  projest specification v2  tsconfig.base.json  vercel.json
.github/: ci-main.yml  ci-pr.yml
.github/workflows/: ci.yml  web-vercel-build-check.yml
apps/api/: .env.example  .eslintrc.cjs  package.json  tsconfig.json  tsconfig.test.json
apps/api/prisma/: schema.prisma  seed.beta.ts  seed.ts
apps/web/: .eslintrc.cjs  .eslintrc.json  next.config.js  package.json  tsconfig.json
apps/worker/: .env.example  package.json  tsconfig.json
docs/: ci-modes.md  day-1-runbook.md  deploy.md  ops-runbook.md  pilot-launch-pack.md
docs/engineering/: prisma-migrations.md
docs/operations/: backup-restore.md  incident-runbook.md
docs/security/: secrets-management.md  threat-model.md
infra/docker/: scraper.Dockerfile
infra/scripts/: setup.sh
scripts/: prisma-migrate-if-db.js  run-integration-if-db.js
services/scraper/: pyproject.toml  requirements.in  requirements.txt  scrapy.cfg  scrapyd.conf
services/scraper/surplus_scraper/: base.py  items.py  pipelines.py  settings.py
services/scraper/surplus_scraper/spiders/: csv_feed.py  healthcheck.py  html_table.py  pdf_list.py  watch_example.py
services/scraper/tests/: test_base_spider.py  test_connector_spiders.py  test_health_spider.py
services/scraper/tests/fixtures/: csv_feed.csv  html_table.html  listing.html
types/custom/: index.d.ts
(+115 files in other folders)
